--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
 
   --color-primary: #1c41e6;
   --color-secondary: #161630;
-  --color-accent: #00e7f5;
+  --color-accent: #33a7e9;
 
   --color-text-primary: #161630;
   --color-text-muted-primary: #434363;
@@ -93,7 +93,7 @@ button {
   color: var(--color-bg-primary);
 }
 .btn-primary-light:hover {
-  background-color: color-mix(in srgb, var(--color-secondary) 60%, transparent);
+  background-color: var(--color-accent);
 }
 
 .btn-secondary {
@@ -109,5 +109,5 @@ button {
   color: var(--color-bg-primary);
 }
 .btn-secondary-light:hover {
-  background-color: color-mix(in srgb, var(--color-secondary) 40%, transparent);
+  background-color: color-mix(in srgb, var(--color-accent) 40%, transparent);
 }
