--- a/src/App.css
+++ b/src/App.css
@@ -1,3 +1,7 @@
+@import "swiper/css";
+@import "swiper/css/navigation";
+@import "swiper/css/pagination";
+
 #root {
   min-height: 100vh;
   width: 100%;
